--- a/index.html
+++ b/index.html
@@ -5,33 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>טמפרטורה במקררים</title>
   <style>
-    :root { --ok:#16a34a; --bad:#ef4444; --warn:#b45309; --muted:#64748b; }
+    :root { --ok:#16a34a; --bad:#ef4444; --warn:#b45309; --muted:#64748b; --card:#ffffff; --shadow: rgba(17,24,39,.12); }
     * { box-sizing: border-box; }
-    body { margin:0; background:#f5f7fb; color:#0f172a; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; }
+    body { margin:0; background:#f5f7fb; color:#0f172a; font-family: system-ui,-apple-system, Segoe UI, Roboto, Helvetica, Arial; }
     .wrap { max-width: 1200px; margin: 24px auto; padding: 0 16px; }
+
     header { display:flex; gap:12px; align-items:center; justify-content:space-between; margin: 0 0 14px; }
     h2 { margin:0; font-size: 22px; letter-spacing:.2px; }
-    .chips { display:flex; gap:8px; flex-wrap:wrap; }
+    .actions { display:flex; gap:8px; align-items:center; flex-wrap:wrap; }
     .chip { font-size:12px; padding:6px 10px; border-radius:999px; background:#ffffff; color:#334155; border:1px solid #e2e8f0; }
+    .btn { cursor:pointer; user-select:none; font-size:12px; padding:6px 12px; border-radius:10px; border:1px solid #d1d5db; background:#fff; color:#111827; box-shadow: 0 1px 2px rgba(0,0,0,.05);} 
+    .btn[aria-pressed="true"]{ background:#111827; color:#fff; border-color:#111827; }
 
     .grid { display:grid; grid-template-columns: repeat(auto-fill, minmax(260px,1fr)); gap:14px; }
-    .card { background:#ffffff; border:1px solid #e5e7eb; border-radius:14px; padding:14px; box-shadow: 0 6px 18px rgba(0,0,0,.06); display:flex; flex-direction:column; gap:10px; }
+    .card { background:var(--card); border:1px solid #e5e7eb; border-radius:14px; padding:14px; box-shadow: 0 6px 18px var(--shadow); display:flex; flex-direction:column; gap:10px; }
     .card.ok { border-inline-start: 4px solid var(--ok); }
     .card.alarm { border-inline-start: 4px solid var(--bad); }
-    .card.sensor { border-inline-start: 4px solid var(--warn); }
+    .card.sensor, .card.rising, .card.spike { border-inline-start: 4px solid var(--warn); }
 
     .top { display:flex; align-items:center; justify-content:space-between; gap:8px; }
-    .id { background:#f1f5f9; border:1px solid #e2e8f0; color:#0f172a; padding:4px 8px; border-radius:10px; font-weight:600; }
+    /* в RTL имя справа, номер слева — просто ставим имя первым */
     .name { font-weight:700; font-size:16px; color:#0f172a; overflow:hidden; text-overflow:ellipsis; white-space:nowrap; }
+    .id { background:#f1f5f9; border:1px solid #e2e8f0; color:#0f172a; padding:4px 8px; border-radius:10px; font-weight:700; min-width:48px; text-align:center; }
+
+    .badges { display:inline-flex; gap:6px; align-items:center; }
 
     .temp { font-size:34px; font-weight:800; line-height:1; }
     .num { direction:ltr; unicode-bidi:isolate; font-variant-numeric: tabular-nums; }
 
     .row { display:flex; align-items:center; justify-content:space-between; gap:8px; font-size:13px; }
-    .status { display:inline-flex; align-items:center; gap:6px; font-weight:700; }
+    .status { display:inline-flex; align-items:center; gap:6px; font-weight:800; }
     .status.ok { color: var(--ok); }
     .status.alarm { color: var(--bad); }
-    .status.sensor { color: var(--warn); }
+    .status.rising, .status.spike, .status.sensor { color: var(--warn); }
     .muted { color: var(--muted); }
 
     footer { text-align:center; color:#64748b; font-size:12px; margin:16px 0 24px; }
@@ -41,10 +47,8 @@
   <div class="wrap">
     <header>
       <h2>טמפרטורה במקררים</h2>
-      <div class="chips">
-        <span class="chip">9°C↑ = Alarm מקרר</span>
-        <span class="chip">−1°C↑ = Alarm מקפיא</span>
-        <span class="chip">Alarm רק אם ≥ 30 דק'</span>
+      <div class="actions">
+        <button id="toggleIssues" class="btn" aria-pressed="false">בעיות בלבד</button>
         <span id="lastUpdate" class="chip">—</span>
       </div>
     </header>
@@ -56,75 +60,112 @@
 
   <script type="module">
     // ===== CONFIG =====
-    const DATA_URL = "https://fridge-proxy-vercel.vercel.app/api/status"; // ← твой рабочий прокси
+    const DATA_URL = "https://fridge-proxy-vercel.vercel.app/api/status"; // твой прокси
     const POLL_MS = 60_000;
     const HISTORY_MINUTES = 48 * 60;
-    const ALARM_FRIDGE = 9;
-    const ALARM_FREEZER = -1;
-    const ALARM_WINDOW_MIN = 30;
-    const IGNORE_SPIKES_MIN = 10;
-    const LS_KEY = "fridge_history_v3_cards";
+    const ALARM_FRIDGE = 9;       // холодильник
+    const ALARM_FREEZER = -1;     // морозильник
+    const ALARM_WINDOW_MIN = 30;  // красный аларм
+    const IGNORE_SPIKES_MIN = 5;  // спайк до 5 минут
+    const LS_KEY = "fridge_history_v4_cards";
 
-    // ===== helpers =====
+    let showOnlyIssues = false;
+
+    // карточки со снежинкой
+    const FROST_IDS = new Set(["1","2","8","10","15","16","18"]);
+
+    // Переименования (по точному имени, лишние пробелы срезаем)
+    const RENAME_BY_NAME = new Map([
+      ["מקרר מעדנים", "מקפיא"],
+      ["מקרר חלב", "מקרר ביצים"],
+      ["מקרר ביצים", "מקרר"],
+      ["מקפיא בצקים", "מקפיא לחם"],
+      ["מקפיא לחם", "דגים מקפיא"],
+    ]);
+
     const isFreezer = (name) => /מקפ|freez/i.test(name || "");
     const loadHistory = () => { try { return JSON.parse(localStorage.getItem(LS_KEY) || "{}"); } catch { return {}; } };
     const saveHistory = (h) => localStorage.setItem(LS_KEY, JSON.stringify(h));
-    function trimHistory(h){ const cutoff = Date.now() - HISTORY_MINUTES*60_000; for (const k of Object.keys(h)){ h[k] = (h[k]||[]).filter(e=>e.t>=cutoff); if(!h[k].length) delete h[k]; } return h; }
-    function upsertReading(h, id, value){ const t=Date.now(); if(!h[id]) h[id]=[]; h[id].push({v:value,t}); const a=h[id]; if(a.length>=2 && Math.abs(a[a.length-1].t-a[a.length-2].t)<50_000){ a.splice(a.length-2,1);} }
-    function sustainedAlarmMinutes(series, thr){ let m=0; for(let i=series.length-1;i>=0;i--){ const {v,t}=series[i]; if(v==null||isNaN(v)) return Infinity; if(v>thr){ const pt=i>0?series[i-1].t:t; m+=Math.max(1,Math.round((t-pt)/60_000)); } else break; } return m; }
 
-    // ===== parse XML (без регэкспа в строковом литерале) =====
+    function trimHistory(h){
+      const cutoff = Date.now() - HISTORY_MINUTES*60_000;
+      for (const k of Object.keys(h)){
+        h[k] = (h[k]||[]).filter(e=>e.t>=cutoff);
+        if(!h[k].length) delete h[k];
+      }
+      return h;
+    }
+
+    function upsertReading(h, id, value){
+      const t=Date.now(); if(!h[id]) h[id]=[]; h[id].push({v:value,t});
+      const a=h[id]; if(a.length>=2 && Math.abs(a[a.length-1].t-a[a.length-2].t)<50_000){ a.splice(a.length-2,1); }
+    }
+
+    function sustainedAlarmMinutes(series, thr){
+      let m=0; for(let i=series.length-1;i>=0;i--){ const {v,t}=series[i]; if(v==null||isNaN(v)) return Infinity; if(v>thr){ const pt=i>0?series[i-1].t:t; m+=Math.max(1,Math.round((t-pt)/60_000)); } else break; } return m;
+    }
+
+    function renameName(original){
+      const key = (original||"").trim();
+      return RENAME_BY_NAME.get(key) || original;
+    }
+
     function parseXMLToRecords(xmlText){
       const xml = new DOMParser().parseFromString(xmlText, 'application/xml');
       if (xml.documentElement.nodeName === 'parsererror') throw new Error('Неверный XML');
-      const map = {};
-      xml.querySelectorAll('u').forEach(n=>{
-        const attr = n.getAttribute('i') || '';
-        if (!attr.startsWith('list_')) return;
-        const idx = parseInt(attr.slice(5), 10);
-        if (!Number.isFinite(idx)) return;
-        map[idx] = (n.textContent || '').trim();
-      });
-      const keys = Object.keys(map).map(Number).sort((a,b)=>a-b);
-      const out=[];
-      for (const base of keys){
-        if(base%6!==0) continue;
-        const idRaw=map[base], name=map[base+1], tempRaw=map[base+2];
-        if(!idRaw||!name) continue;
-        const idNum=parseInt(String(idRaw),10);
-        if(!(idNum>=1&&idNum<=19)) continue;
-        const tnum=Number(String(tempRaw??'').replace(',','.'));
-        out.push({ id:String(idRaw), name, temp:isFinite(tnum)?tnum:null });
-      }
+      const map = {}; xml.querySelectorAll('u').forEach(n=>{ const attr=n.getAttribute('i')||''; if(!attr.startsWith('list_')) return; const idx=parseInt(attr.slice(5),10); if(Number.isFinite(idx)) map[idx]=(n.textContent||'').trim(); });
+      const keys = Object.keys(map).map(Number).sort((a,b)=>a-b); const out=[];
+      for (const base of keys){ if(base%6!==0) continue; const idRaw=map[base], nameRaw=map[base+1], tempRaw=map[base+2]; if(!idRaw||!nameRaw) continue; const idNum=parseInt(String(idRaw),10); if(!(idNum>=1&&idNum<=19)) continue; const tnum=Number(String(tempRaw??'').replace(',','.')); const name = renameName(nameRaw); out.push({ id:String(idRaw).trim(), name, temp:isFinite(tnum)?tnum:null }); }
       return out;
     }
 
-    function cardHTML(r, minutes, cls){
-      const label = cls==='alarm' ? 'Alarm 🔴' : cls==='sensor' ? 'Sensor ⚠️' : (minutes>0 && minutes<IGNORE_SPIKES_MIN ? 'Spike ⏳ (<5m)' : 'Normal ✅');
+    function statusOf(r, minutes){
+      if (r.temp == null || !isFinite(r.temp)) return { cls:'sensor', label:'Sensor ⚠️' };
+      if (minutes >= ALARM_WINDOW_MIN) return { cls:'alarm', label:'Alarm 🔴' };
+      if (minutes > 0 && minutes < IGNORE_SPIKES_MIN) return { cls:'spike', label:'Spike ⏳ (<5m)' };
+      if (minutes >= IGNORE_SPIKES_MIN && minutes < ALARM_WINDOW_MIN) return { cls:'rising', label:'Rising ⏱ (≥5m)' };
+      return { cls:'ok', label:'Normal ✅' };
+    }
+
+    function cardHTML(r, minutes, st){
       const temp = (r.temp==null||!isFinite(r.temp)) ? '—' : `${r.temp.toFixed(1)}°C`;
+      const snow = FROST_IDS.has(String(r.id)) ? '<span title="Freezer" aria-hidden="true">❄️</span>' : '';
       return `
-        <div class="card ${cls}">
+        <div class="card ${st.cls}">
           <div class="top">
+            <div class="name" title="${r.name}">${r.name} <span class="badges">${snow}</span></div>
             <div class="id num">${r.id}</div>
-            <div class="name" title="${r.name}">${r.name}</div>
           </div>
           <div class="temp num">${temp}</div>
-          <div class="row"><span class="status ${cls}">${label}</span><span class="muted">דקות ↑: <span class="num">${Number.isFinite(minutes)?minutes:'∞'}</span></span></div>
+          <div class="row">
+            <span class="status ${st.cls}">${st.label}</span>
+            <span class="muted">דקות ↑: <span class="num">${Number.isFinite(minutes)?minutes:'∞'}</span></span>
+          </div>
         </div>`;
     }
 
     function render(rows, hist){
       const grid = document.getElementById('cards'); grid.innerHTML='';
       const frag = document.createDocumentFragment();
-      rows.forEach(r=>{
+
+      // сортируем: сначала Alarm, потом Rising, Spike, Sensor, затем OK
+      const order = { alarm:0, rising:1, spike:2, sensor:3, ok:4 };
+
+      const cards = rows.map(r=>{
         const thr = isFreezer(r.name) ? ALARM_FREEZER : ALARM_FRIDGE;
         const minutes = sustainedAlarmMinutes(hist[r.id]||[], thr);
-        const isAlarm = minutes >= ALARM_WINDOW_MIN;
-        const cls = r.temp==null ? 'sensor' : isAlarm ? 'alarm' : 'ok';
+        const st = statusOf(r, minutes);
+        return { r, minutes, st };
+      })
+      .filter(x => !showOnlyIssues || x.st.cls !== 'ok')
+      .sort((a,b)=> order[a.st.cls]-order[b.st.cls]);
+
+      cards.forEach(x=>{
         const wrapper = document.createElement('div');
-        wrapper.innerHTML = cardHTML(r, minutes, cls);
+        wrapper.innerHTML = cardHTML(x.r, x.minutes, x.st);
         frag.appendChild(wrapper.firstElementChild);
       });
+
       grid.appendChild(frag);
     }
 
@@ -147,9 +188,19 @@
       }
     }
 
+    // toggle button
+    const toggleBtn = document.getElementById('toggleIssues');
+    toggleBtn.addEventListener('click', ()=>{
+      showOnlyIssues = !showOnlyIssues;
+      toggleBtn.setAttribute('aria-pressed', String(showOnlyIssues));
+      toggleBtn.textContent = showOnlyIssues ? 'הצג הכל' : 'בעיות בלבד';
+      // перерисуем из последнего снапшота
+      tick();
+    });
+
     tick();
     setInterval(tick, POLL_MS);
-    document.getElementById('release').textContent = 'Last release: 2025-09-12 01-33';
+    document.getElementById('release').textContent = 'Last release: 2025-09-12';
   </script>
 </body>
 </html>
